<resources>
    <string name="app_name">UMC_Hackerton_7</string>
    <string name="mypage">마이페이지</string>
    <string name="nickname">닉네임</string>
    <string name="university">소속</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="mytag">관심 태그</string>
    <string name="introduce">한줄 소개</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="community">커뮤니티</string>
    <string name="_sentence">같이 이야기 나눠요!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="livetalk">실시간 TALK</string>
    <string name="toptalk">덧글 많은 글</string>
</resources>