<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mypage"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/editLayout"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="#39618C"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@drawable/button_layout"
        android:padding="10dp"
        android:minWidth="80dp"
        android:minHeight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintBottom_toTopOf="@id/editLayout"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_layout"
        android:backgroundTint="#39618C"
        android:padding="10dp"
        android:minWidth="80dp"
        android:minHeight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@id/editLayout"
        app:layout_constraintBottom_toTopOf="@id/editLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bolder_layout"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_title">

        <ImageView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/useredit"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toTopOf="@id/editLayout"/>


        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/user"/>

        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/nickname"
            app:layout_constraintTop_toBottomOf="@id/user"/>

        <ImageButton
            android:id="@+id/editBtnNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pen"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/edit_nickname"
            app:layout_constraintTop_toBottomOf="@id/user"/>

        <TextView
            android:id="@+id/university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/nickname"/>

        <TextView
            android:id="@+id/university_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10dp"
            app:layout_constraintStart_toEndOf="@id/university"
            app:layout_constraintTop_toBottomOf="@id/nickname"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/university"/>

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintStart_toEndOf="@id/age"
            app:layout_constraintTop_toBottomOf="@id/university"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/age"/>

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintStart_toEndOf="@id/gender"
            app:layout_constraintTop_toBottomOf="@id/age"/>

        <TextView
            android:id="@+id/mytag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mytag"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/gender"/>

        <ImageButton
            android:id="@+id/tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pen"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/mytag"
            app:layout_constraintTop_toBottomOf="@id/gender"/>

        <TextView
            android:id="@+id/introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/mytag"/>

        <ImageButton
            android:id="@+id/introduce_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pen"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/introduce"
            app:layout_constraintTop_toBottomOf="@id/mytag"/>

        <EditText
            android:id="@+id/edit_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/introduce"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>